# analyzer

./: CMakeLists.txt  README.txt
complex_numbers/: CMakeLists.txt  complex_num.cpp  complex_num.h
source/: main.cpp  main_multithreaded.cpp  multithreaded.cpp  multithreaded.h  procedure.cpp  procedure.h  procedures.cpp  procedures.h
workdir/: big_squared.txt  not_squared.txt  rotation.txt  rotation_2.txt  rotation_3.txt  rotation_4.txt  rototation.txt  singular.txt  squared_3x3.txt  squared_3x3_random.txt  symetry.txt
